name:                hs-mini-netmap
version:             0.1.0.0
synopsis:            batch ping network hosts
-- description:         
homepage:            github.com/vdorr/hs-mini-netmap
license:             MIT
license-file:        LICENSE
author:              vdorr
maintainer:          vdorr.package@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2

library
  exposed-modules:     Network.MiniNetMap, Network.MiniNetMap.Ping
  -- other-modules:       
  other-extensions:    CPP, RecordWildCards
  build-depends:       base >=4.9 && <4.10
                     , linux-live-netinfo >=0.1 && <0.2
                     , network >=2.6 && <2.7
                     , stm >=2.4 && <2.5
                     , bytestring >=0.10 && <0.11
                     , cereal >=0.5 && <0.6
                     , unix >=2.7 && <2.8
  -- hs-source-dirs:      
  default-language:    Haskell2010


executable hmnm
  main-is:             hmnm.hs
  build-depends:       hs-mini-netmap
                     , ansi-terminal
                     , linux-live-netinfo >=0.1 && <0.2
                     , netlink == 1.1.1.0
                     , base >=4.8 && <4.10
                     , bytestring >=0.10 && <0.11
                     , cereal
                     , network >=2.6 && <2.7, unix >=2.7 && <2.8, containers >=0.5 && <0.6, stm >=2.4 && <2.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded

